# metered-compute

./: .gitignore  README.md
solutions/: README.md
solutions/3_solution/: .env.dev.defaults  .secrets.baseline  Makefile  README.md  compose.yaml  pyproject.toml
solutions/3_solution/0_venkat-worklog/kanban/: BOARD.md
solutions/3_solution/0_venkat-worklog/kanban/done/: P0-001-solution3-repo-bootstrap.md  P0-004-solution3-dispatch-worker-billing.md  P0-005-solution3-projections-and-recovery.md  P0-006-solution3-observability-proof.md  P1-008-solution3-rfc-hardening-and-integrity.md  P2-009-solution3-admin-topup-idempotent-retry.md
solutions/3_solution/0_venkat-worklog/kanban/in-progress/: P0-004-solution3-dispatch-worker-billing.md  P0-005-solution3-projections-and-recovery.md  P0-006-solution3-observability-proof.md
solutions/3_solution/0_venkat-worklog/kanban/todo/: P0-002-solution3-core-contracts-and-migrations.md  P0-003-solution3-auth-api-submit.md  P0-004-solution3-dispatch-worker-billing.md  P0-005-solution3-projections-and-recovery.md  P0-006-solution3-observability-proof.md
solutions/3_solution/docker/api/: Dockerfile  api.py
solutions/3_solution/docker/dispatcher/: Dockerfile
solutions/3_solution/docker/hydra/: bootstrap-clients.sh
solutions/3_solution/docker/outbox_relay/: Dockerfile
solutions/3_solution/docker/projector/: Dockerfile
solutions/3_solution/docker/reconciler/: Dockerfile
solutions/3_solution/docker/watchdog/: Dockerfile
solutions/3_solution/docker/webhook_worker/: Dockerfile
solutions/3_solution/docker/worker/: Dockerfile
solutions/3_solution/monitoring/grafana/dashboards/: solution3-bootstrap.json  solution3-overview.json
solutions/3_solution/monitoring/prometheus/: alerts.yml  prometheus.yml
solutions/3_solution/scripts/: __init__.py  capacity_model.py  capture_runtime_logs.sh  coverage_gate.sh  docker_lint.sh  docker_lock_check.sh  fault_check.sh  full_stack_check.sh  integration_check.sh  load_harness.py  migrate.sh  quality_gate.sh  run_scenarios.py  secrets_check.sh  smell_check.sh  wait_ready.sh
solutions/3_solution/src/solution3/: app.py  constants.py  main.py
solutions/3_solution/src/solution3/api/: admin_routes.py  auth_routes.py  error_responses.py  paths.py  task_read_routes.py  task_write_routes.py
solutions/3_solution/src/solution3/core/: runtime.py  settings.py
solutions/3_solution/src/solution3/db/: migrate.py  repository.py
solutions/3_solution/src/solution3/models/: domain.py  schemas.py
solutions/3_solution/src/solution3/observability/: metrics.py
solutions/3_solution/src/solution3/services/: auth.py  billing.py  webhook_security.py
solutions/3_solution/src/solution3/utils/: logging.py
solutions/3_solution/tests_bootstrap/: conftest.py
solutions/3_solution/tests_bootstrap/e2e/: test_bootstrap_demo.py
solutions/3_solution/tests_bootstrap/fault/: test_wait_ready_timeout.py
solutions/3_solution/tests_bootstrap/integration/: test_bootstrap_http.py  test_command_api_http.py  test_event_bridge.py  test_migrations.py  test_task_execution_http.py  test_webhook_delivery_http.py
solutions/3_solution/tests_bootstrap/unit/: test_app_runtime.py  test_auth_service.py  test_billing_service.py  test_bootstrap_settings.py  test_bootstrap_workers.py  test_capacity_model_compare.py  test_command_api_routes.py  test_core_contracts_and_migrations.py  test_dispatcher.py  test_load_harness_metrics.py  test_migrate.py  test_outbox_relay.py  test_projector.py  test_rebuilder.py  test_reconciler.py  test_repository.py  test_scenarios_script.py  test_webhook_dispatcher.py  test_webhook_security.py  test_worker_model_runtime.py  test_worker_runtime.py
solutions/3_solution/utils/: demo.py  demo.sh
solutions/4_solution/: .secrets.baseline  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
solutions/4_solution/migrations/: 0001_schema.sql  0002_seed.sql  0003_user_role.sql
solutions/4_solution/monitoring/prometheus/: prometheus.yml
solutions/4_solution/scripts/: coverage_gate.sh  demo.sh  loadtest.py  run_scenarios.py  secrets_check.sh  smell_check.sh
solutions/4_solution/src/solution4/: app.py  billing.py  logging.py  metrics.py  settings.py  workflows.py
solutions/4_solution/tests/fault/: test_compute_outage_releases_credits.py
solutions/4_solution/tests/integration/: test_submit_flow.py
solutions/4_solution/tests/unit/: test_app_models.py  test_app_submit_failure.py  test_billing.py  test_cache.py  test_compute_gateway.py  test_compute_worker.py  test_logging.py  test_monitoring_assets.py  test_repository.py  test_settings.py  test_workflows.py
(+607 files in other folders)
